@startuml
!theme mars
left to right direction
class User {
  - id: Int
  - username: String
  - password: String
  - street: String
  - street_nr: Char
  - zip: Int
  - city: String
}

class Account {
  - id: Int
  - title: String
}

class Position {
  - id: Int
  - text: String
  - amountRappen: Int
}

class Category {
  - id: Int
  - title: String
  - description: String
  - color: String
}

User "1" o-- "0..n" Account : has
Account "1" *-- "0..n" Position : has
Position "many" -- "0..1" Category : belongs to
@enduml